# AI-Practice-Projects

./: README.md
Research Assistant Agent/: README.md  main.py  pyproject.toml  requirements.txt  workflow.py
Research Assistant Agent/static/: index.html
Weather Checker Agent/: package-lock.json
Weather Checker Agent/back-end/: .env  main.py  pyproject.toml
Weather Checker Agent/back-end/app/: main.py  routes.py
Weather Checker Agent/front-end/: package-lock.json  package.json
Weather Checker Agent/front-end/src/: App.jsx
Weather Checker Agent/front-end/src/components/: Agent.jsx
Weather Checker Agent/front_end/: package-lock.json
Weather Checker Agent/front_end/src/: App.jsx  Chatbot.css
